# study-courses

./: README.md
OpenGl/: README.md
OpenGl/basicTrials/: CMakeLists.txt  main.cpp
OpenGl/basicTrials/glad/include/glad/: glad.h
OpenGl/basicTrials/glad/src/: glad.c
RustLang/: README.md
RustLang/microgrep/src/: lib.rs  main.rs
